# blog-with-code

./: .gitignore  pyproject.toml
apps/sqlite_streamlit/: Dockerfile  create_table_app.py  db_util.py  sql_app.py
code_snippets/image_tutorial/: pil_base64.py
code_snippets/websockets_tutorial/: client.py  server.py
contents/carrying_capacity/: carrying_capacity.ipynb  carrying_capacity_draft.md  ode_model.py
contents/gacha_simulator/: simulator.ipynb
contents/gatcha_simulator/: simulator.ipynb
contents/llm_tutorial/: pyproject.toml
contents/polars_style_guide/: polars_style_guide.ipynb
jupyterbook/: _config.yml  jupyterbook_manual.md
jupyterbook/_build/.doctrees/: environment.pickle  intro.doctree  jupyterbook_manual.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
jupyterbook/_build/html/: .buildinfo  genindex.html  intro.html  jupyterbook_manual.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
jupyterbook/_build/html/_sources/: jupyterbook_manual.md
jupyterbook/_build/jupyter_execute/: markdown-notebooks.ipynb
