[tool.poetry]
name = "blog-with-code"
version = "0.1.0"
description = ""
authors = ["Chanhee Lee <qjzx6428@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
jupyter = "^1.0.0"
jupyter-book = "^1.0.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
