[tool.poetry]
name = "blog-with-code"
version = "0.1.0"
description = ""
authors = ["Chanhee Lee <qjzx6428@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
jupyter = "^1.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
streamlit = "^1.37.1"
sqlalchemy = "^2.0.32"


[tool.poetry.group.dev.dependencies]
nbstripout = "^0.7.1"
black = {extras = ["jupyter"], version = "^24.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
