[tool.poetry]
name = "llm-tutorial"
version = "0.1.0"
description = ""
authors = ["Chanhee Lee <qjzx6428@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
llama-toolchain = "^0.0.13"
transformers = "^4.44.2"
torch = "^2.4.1"
accelerate = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
